[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
ethers-etherscan = "2.0.7"
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
kv = "0.24.0"
async-trait = "0.1.68"
serde = "1.0.164"
retry = "2.0.0"
